--- a/Scss/_config.scss
+++ b/Scss/_config.scss
@@ -2,3 +2,16 @@ $light-color: #e6e2e2;
 $font-stack: Arial, Helvetica, sans-serif;
 $primary-color: #01002a;
 $secondary-color: #abdb3a;
+
+@function set-text-color($color) {
+  @if (lightness($color) >70) {
+    @return #333;
+  } @else {
+    @return #fff;
+  }
+}
+//set background & text 
+@mixin set-background($color){
+    background-color:$color;
+    color: set-text-color($color);
+}
